Fix menu position on mobile

--- a/css/hecticjeff.css
+++ b/css/hecticjeff.css
@@ -95,7 +95,7 @@ pre > code {
 
 @media (max-width: 767px) {
   .logo {
-    width: 200px;
+    width: 170px;
     display: inline-block;
     float: left;
     margin-bottom: 10px;
@@ -113,8 +113,7 @@ pre > code {
   }
   .nav.nav-big > li > a {
     font-size: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 5px 3px;
     line-height: 8px;
   }
 
